<resources>
    <string name="app_name">Welp</string>
    <string name="home_posted">Posted:</string>
    <string name="home_bookmark">Add To</string>
    <string name="SignUpSubject_Title">Choose the subjects you want to study</string>
    <string name="sign_out">Sign Out</string>
    <string name="credits">Credits</string>
    <string name="sign_up_year_Title">Pick Your Year of Study</string>
    <string name="signUp_Title">What do you want to be known as?</string>
    <string name="SignUpUsername">Username</string>
    <string name="SignUpEmail">   Email</string>
    <string name="SignUpPassword">   Password</string>
    <string name="SignUp_confirm_password">Confirm Password</string>
    <string name="login_signUpBtn"> Sign Up Here</string>
    <string name="SignUpRegister">Register</string>
    <string name="splash_Tagline">We Help You Study</string>
    <string name="menu_night_mode">Night mode</string>
    <string name="menu_night_mode_system">Follow system</string>
    <string name="menu_night_mode_day">Day (always)</string>
    <string name="menu_night_mode_night">Night (always)</string>
    <string name="menu_night_mode_auto">Auto</string>
    <string name="about_us">About Us</string>
    <string-array name="array_search">
        <item>Math</item>
        <item>A-Math</item>
        <item>Chinese</item>
        <item>English</item>
        <item>Chemistry</item>
        <item>Physics</item>
        <item>Geography</item>
        <item>History</item>
        <item>Biology</item>
        <item>Math + Secondary 1</item>
        <item>Math + Secondary 2</item>
        <item>Math + Secondary 3</item>
        <item>Math + Secondary 4</item>
        <item>Math + JC 1</item>
        <item>Math + JC 2</item>
        <item>Math + JC 3</item>
        <item>A-Math + Secondary 1</item>
        <item>A-Math + Secondary 2</item>
        <item>A-Math + Secondary 3</item>
        <item>A-Math + Secondary 4</item>
        <item>A-Math + JC 1</item>
        <item>A-Math + JC 2</item>
        <item>A-Math + JC 3</item>
        <item>Chinese + Secondary 1</item>
        <item>Chinese + Secondary 2</item>
        <item>Chinese + Secondary 3</item>
        <item>Chinese + Secondary 4</item>
        <item>Chinese + JC 1</item>
        <item>Chinese + JC 2</item>
        <item>Chinese + JC 3</item>
        <item>English + Secondary 1</item>
        <item>English + Secondary 2</item>
        <item>English + Secondary 3</item>
        <item>English + Secondary 4</item>
        <item>English + JC 1</item>
        <item>English + JC 2</item>
        <item>English + JC 3</item>
        <item>Chemistry + Secondary 1</item>
        <item>Chemistry + Secondary 2</item>
        <item>Chemistry + Secondary 3</item>
        <item>Chemistry + Secondary 4</item>
        <item>Chemistry + JC 1</item>
        <item>Chemistry + JC 2</item>
        <item>Chemistry + JC 3</item>
        <item>Physics + Secondary 1</item>
        <item>Physics + Secondary 2</item>
        <item>Physics + Secondary 3</item>
        <item>Physics + Secondary 4</item>
        <item>Physics + JC 1</item>
        <item>Physics + JC 2</item>
        <item>Physics + JC 3</item>
        <item>Geography + Secondary 1</item>
        <item>Geography + Secondary 2</item>
        <item>Geography + Secondary 3</item>
        <item>Geography + Secondary 4</item>
        <item>Geography + JC 1</item>
        <item>Geography + JC 2</item>
        <item>Geography + JC 3</item>
        <item>History + Secondary 1</item>
        <item>History + Secondary 2</item>
        <item>History + Secondary 3</item>
        <item>History + Secondary 4</item>
        <item>History + JC 1</item>
        <item>History + JC 2</item>
        <item>History + JC 3</item>
        <item>Biology + Secondary 1</item>
        <item>Biology + Secondary 2</item>
        <item>Biology + Secondary 3</item>
        <item>Biology + Secondary 4</item>
        <item>Biology + JC 1</item>
        <item>Biology + JC 2</item>
        <item>Biology + JC 3</item>
        <item>Secondary 1</item>
        <item>Secondary 2</item>
        <item>Secondary 3</item>
        <item>Secondary 4</item>
        <item>JC 1</item>
        <item>JC 2</item>
        <item>JC 3</item>
        <item>Notes</item>
        <item>Lesson</item>
        <item>Practice</item>
    </string-array>
</resources>
