<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    >

    <ImageView
        android:id="@+id/ivlogo"
        android:layout_width="214dp"
        android:layout_height="109dp"
        android:layout_marginTop="74dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <View
        android:id="@+id/someView"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:id="@+id/llinputBox"
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:layout_below="@id/ivlogo"
        android:layout_marginTop="30dp"
        android:background="@color/veriWhite"
        android:orientation="vertical"
        android:paddingBottom="50dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="50dp"
        android:layout_alignLeft="@id/btnLogin"
        android:layout_alignRight="@id/btnLogin">

        <EditText
            android:id="@+id/et_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_YouCantSeeME"
            android:hint="@string/SignUpEmail"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/text_color_ItsNotTheSame"
            android:maxLines="1"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/llNoteTopBar"
            android:background="@color/text_color_whenInDoubtUseThis" />

        <EditText
            android:id="@+id/et_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/color_YouCantSeeME"
            android:hint="@string/SignUpPassword"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/text_color_ItsNotTheSame" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/llNoteTopBar"
            android:background="@color/text_color_whenInDoubtUseThis" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="310dp"
        android:layout_height="68dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="84dp"
        android:background="@color/background_material_dark"
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="@color/veriWhite"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/llSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-84dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Haven't Sign Up Yet?  "
            android:textColor="@color/veriWhite"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/color_YouCantSeeME"
            android:text="@string/login_signUpBtn"
            android:textColor="@color/btn_color_PakatanHarapan" />
    </LinearLayout>
</RelativeLayout>